--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formidable": "^3.5.4",
     "next": "^15.4.7",
+    "node-ssh": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "simple-ssh": "^1.1.1",
+    "ssh2-sftp-client": "^12.0.1"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
