--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "24.3.0",
     "@types/react": "19.1.10",
+    "cross-env": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
     "jest": "^29.7.0",
