--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
   "version": 2,
   "name": "zicount",
-  
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ],
   "env": {
     "NODE_ENV": "production"
   }
