--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
   },
   "routes": [
     {
+      "src": "/_next/:path*",
+      "dest": "/_next/:path*"
+    },
+    {
+      "src": "/static/:path*",
+      "dest": "/static/:path*"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
@@ -23,18 +31,9 @@
     {
       "source": "/api/(.*)",
       "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        }
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
       ]
     }
   ]
