--- a/package.json
+++ b/package.json
@@ -6,32 +6,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "start": "next start"
   },
   "dependencies": {
-    "formidable": "^3.5.4",
     "mongodb": "^6.18.0",
     "next": "^15.4.7",
-    "node-ssh": "^13.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.33.5",
-    "simple-ssh": "^1.1.1",
-    "ssh2-sftp-client": "^12.0.1"
+    "react-dom": "^18.2.0"
+    
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
     "@types/node": "24.3.0",
-    "@types/react": "19.1.10",
-    "cross-env": "^10.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "14.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "@types/react": "19.1.10"
   }
 }
