--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "zicount-receipt-analyzer",
-  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "mongodb": "^6.18.0",
     "next": "^15.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-    
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.15",
+    "postcss": "^8.4.49",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
-    "@types/node": "24.3.0",
-    "@types/react": "19.1.10"
+    "eslint": "^8",
+    "eslint-config-next": "15.1.4"
   }
 }
