--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "form-data": "^4.0.4",
+    "formidable": "^3.5.4",
     "mongodb": "^6.18.0",
     "next": "^15.4.7",
+    "node-fetch": "^3.3.2",
+    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.15",
-    "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "eslint": "^8",
