--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/documentai": "^9.4.0",
     "autoprefixer": "^10.4.20",
-    "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "mongodb": "^6.18.0",
     "next": "^15.4.7",
-    "node-fetch": "^3.3.2",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
