--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google-cloud/documentai": "^9.4.0",
+    "@google-cloud/storage": "^7.17.1",
+    "@supabase/supabase-js": "^2.58.0",
     "autoprefixer": "^10.4.20",
     "formidable": "^3.5.4",
     "mongodb": "^6.18.0",
