--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,7 @@
 
 [functions."*"]
   timeout = "30s"
+
+[functions."*"]
+  # Increase function timeout for Document AI processing (max 30s for free tier)
+  timeout = "30s"
