--- a/netlify.toml
+++ b/netlify.toml
@@ -11,9 +11,7 @@
   status = 200
 
 [functions]
-  # Directory for Netlify functions
-  directory = "netlify/functions"
-
-[functions."*"]
-  # Increase function timeout for Document AI processing (max 30s for free tier)
-  timeout = "30s"
+  # Increase function timeout for Document AI processing
+  timeout = 30
+  # Set memory limit for large image processing
+  memory = 1024
